tests/errors/ty_synonym_cyclic_err/ty_synonym_cyclic_err.c
#error ty_synonym_cyclic_err.ty_synonym_cyclic_err:5:1 Cyclic type synonym is forbidden.
#error ty_synonym_cyclic_err.ty_synonym_cyclic_err:7:1 Cyclic type synonym is forbidden.
